--- a/styles.css
+++ b/styles.css
@@ -231,3 +231,36 @@ footer a:hover {
       transform:  scale(1.04);
       box-shadow: 0 6px 24px rgba(255, 255, 255, 0.22);
       }
+      .nav-logo {
+  height: 48px;
+  max-height: 80%;
+  @media (max-width: 768px) {
+    height: 32px;
+  }
+      
+      }
+
+/* Fullscreen Button */
+#fullscreen-btn {
+  background-color: var(--primary);
+  color: white;
+  padding: 0.8rem 1.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background 0.3s;
+  cursor: pointer;
+  margin: auto  ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+#fullscreen-btn:hover {
+  background-color: var(--accent);
+  scale: 1.05;
+  transition: transform 0.2s ease-in-out;
+  transform: scale(1.05);
+}
