--- a/styles.css
+++ b/styles.css
@@ -263,4 +263,78 @@ footer a:hover {
   scale: 1.05;
   transition: transform 0.2s ease-in-out;
   transform: scale(1.05);
+
+}
+/* Ad Banner */
+.ad-banner {
+  background-image: url("images/blockpost.jpg");
+  align-content: flex-start;
+    align-items: flex-start;
+    background-position: 50%;
+    background-size: cover;
+    border-radius: 30px;
+    display: flex
+;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 200px;
+    justify-content: center;
+  
+    padding: 30px;
+    width: 50vw;
+
+}
+.slope-section-blur {
+    backdrop-filter: blur(3px);
+    border: 2px solid #fff;
+    border-radius: 30px;
+    bottom: 0;
+    height: 100%;
+    /* height: 260px; */
+    left: 50%;
+    /* margin-left: 10px; */
+    position: absolute;
+    transform: translate(-50%);
+    width: calc(50vw);
+    z-index: 9;
+}
+
+
+
+.slope-headline .slope-cta-button {
+    z-index: 500;
+
+}
+.slope-cta-button {
+  background-color: var(--primary);
+  color: white;
+  padding: 1rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background 0.3s;
+  cursor: pointer;
+  z-index: 1000;
+}
+.slope-cta-button:hover {
+  background-color: var(--accent);
+  scale: 1.05;
+  transition: transform 0.2s ease-in-out;
+  transform: scale(1.05);
+}
+.slope-section-div {
+  align-items: center;
+  display: flex;
+  height: auto;
+  justify-content: center;
+  margin-bottom: 100px;
+  position: relative;
+  width: 100%;
+  z-index: 10;
+}
+/*this also includes stuff other than h2*/
+.h2-ad {
+  z-index: 1000;
+  position: relative;
 }
