--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ footer a:hover {
     align-items: flex-start;
     background-position: 50%;
     background-size: cover;
-    border-radius: 30px;
+    border-radius: 20px;
     display: flex
 ;
     flex-direction: column;
@@ -286,8 +286,8 @@ footer a:hover {
 }
 .slope-section-blur {
     backdrop-filter: blur(3px);
-    border: 2px solid #fff;
-    border-radius: 30px;
+    border: 3px solid #fff;
+    border-radius: 20px;
     bottom: 0;
     height: 100%;
     /* height: 260px; */
@@ -316,6 +316,7 @@ footer a:hover {
   transition: background 0.3s;
   cursor: pointer;
   z-index: 1000;
+  font-size: .5rem;
 }
 .slope-cta-button:hover {
   background-color: var(--accent);
