--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ footer a:hover {
       box-shadow: 0 6px 24px rgba(255, 255, 255, 0.22);
       }
       .nav-logo {
-  height: 48px;
+  height: 100px;
   max-height: 80%;
   @media (max-width: 768px) {
     height: 32px;
@@ -245,7 +245,7 @@ footer a:hover {
   background-color: var(--primary);
   color: white;
   padding: 0.8rem 1.5rem;
-  border: none;
+  border: white 2px solid;
   border-radius: 0.5rem;
   font-weight: bold;
   text-decoration: none;
@@ -306,7 +306,7 @@ footer a:hover {
 
 }
 .slope-cta-button {
-  background-color: var(--primary);
+  background-color: orange;
   color: white;
   padding: 1rem;
   border: none;
@@ -319,7 +319,7 @@ footer a:hover {
   font-size: .5rem;
 }
 .slope-cta-button:hover {
-  background-color: var(--accent);
+  background-color: orange;
   scale: 1.05;
   transition: transform 0.2s ease-in-out;
   transform: scale(1.05);
@@ -338,4 +338,19 @@ footer a:hover {
 .h2-ad {
   z-index: 1000;
   position: relative;
+  color: rgb(0, 0, 0);
+  font-size: 1rem;
+}
+.h2-ad-title {
+  z-index: 1000;
+  position: relative;
+  color: rgb(255, 255, 255);
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.game-logo {
+  display: block;
+  max-height: 200px;
+  margin: 40px auto;
 }
